samples/_failures_safe/1761352904_bc8329_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ccd7f23.c: In function ‘main’:
./samples/SAFE/__tmp_5ccd7f23.c:118:56: error: expected ‘)’ at end of input
  118 |     if (scanf("%d", &operation) != 1 || (operation != 1
      |                                         ~              ^
      |                                                        )
./samples/SAFE/__tmp_5ccd7f23.c:118:5: error: expected declaration or statement at end of input
  118 |     if (scanf("%d", &operation) != 1 || (operation != 1
      |     ^~
